apps/base/forgejo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  namespace: forgejo
  labels:
    app: forgejo
spec:
  selector:
    app: forgejo
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: http
